--- a/backend/package.json
+++ b/backend/package.json
@@ -4,11 +4,12 @@
   "description": "iNotebook - Your notebook on the cloud",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-validator": "^6.14.3",
@@ -16,6 +17,6 @@
     "mongoose": "^6.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.20"
   }
 }
